--- a/app/javascript/flavours/aether/styles/components/right_column.scss
+++ b/app/javascript/flavours/aether/styles/components/right_column.scss
@@ -13,6 +13,10 @@
     overflow: hidden;
     font-size: 1rem;
     padding: 15px;
+
+    .trends__item__sparkline {
+      display: none;
+    }
   }
 }
 
