Show explore sparkline on wide layout

--- a/app/javascript/flavours/aether/styles/components/right_column.scss
+++ b/app/javascript/flavours/aether/styles/components/right_column.scss
@@ -20,6 +20,10 @@
   }
 }
 
+.wide .right_column .trends__item__sparkline {
+  display: block;
+}
+
 .manage-lists,
 .list-panel {
   margin-top: 0;
