--- a/app/javascript/flavours/aether/styles/components/right_column.scss
+++ b/app/javascript/flavours/aether/styles/components/right_column.scss
@@ -24,6 +24,10 @@
   display: block;
 }
 
+.wide .right_column .display-name {
+  max-width: calc(var(--ui-right-column-width) - 165px);
+}
+
 .manage-lists,
 .list-panel {
   margin-top: 0;
