--- a/app/javascript/flavours/aether/styles/components/misc.scss
+++ b/app/javascript/flavours/aether/styles/components/misc.scss
@@ -261,9 +261,7 @@
   &.inverted {
     color: var(--ui-highlight-color);
 
-    &:hover,
-    &:active,
-    &:focus {
+    &:hover {
       color: var(--ui-highlight-button-text-color);
     }
 
