--- a/app/javascript/flavours/aether/styles/components/single_column_aether.scss
+++ b/app/javascript/flavours/aether/styles/components/single_column_aether.scss
@@ -17,7 +17,7 @@
     }
 
     .ui__header__wrapper {
-      border-bottom: 1px var(--ui-font-border-color) solid;
+      border-bottom: 1px var(--ui-page-border-color) solid;
       position: fixed;
       width: 100%;
       z-index: 2;
