--- a/app/javascript/flavours/aether/styles/variables.scss
+++ b/app/javascript/flavours/aether/styles/variables.scss
@@ -35,11 +35,11 @@
   --ui-primary-color: #9baec8;
   --ui-secondary-color: #d9e1e8;
   --ui-shadow-color: #202020;
-  --ui-body-color: #313543;
+  --ui-body-color: #282c37;
   --ui-body-secondary-color: #1f222b;
   --ui-body-dim-color: #282c37;
   --ui-body-simple-bg: #ffffff;
-  --ui-font-border-color: #282c37;
+  --ui-page-border-color: #282c37;
 
   /* Font Colors */
   --ui-font-color: #ffffff;
@@ -65,7 +65,7 @@
   --ui-body-secondary-color: #eff2f5; /* change to border for light theme? */
   --ui-body-dim-color: #ffffff;
   --ui-body-simple-bg: #333845;
-  --ui-font-border-color: #d5d5d5;
+  --ui-page-border-color: #d5d5d5;
 
   /* Font Colors */
   --ui-font-color: #000000;
@@ -99,7 +99,7 @@
   --ui-body-secondary-color: #eff2f5; /* change to border for light theme? */
   --ui-body-dim-color: #ffffff;
   --ui-body-simple-bg: #333845;
-  --ui-font-border-color: #282c37;
+  --ui-page-border-color: #282c37;
 
   /* Font Colors */
   --ui-font-color: #000000;
