CSS color tweaks and fixes

--- a/app/javascript/flavours/aether/styles/variables.scss
+++ b/app/javascript/flavours/aether/styles/variables.scss
@@ -37,7 +37,7 @@
   --ui-shadow-color: #202020;
   --ui-body-color: #282c37;
   --ui-body-secondary-color: #1f222b;
-  --ui-body-dim-color: #282c37;
+  --ui-body-dim-color: #252933;
   --ui-body-simple-bg: #ffffff;
   --ui-page-border-color: #282c37;
 
@@ -55,19 +55,17 @@
 /* Light theme */
 
 .light-theme {
-  --ui-page-background: #e4ecf0;
+  --ui-page-background: #e9ecee;
   --ui-base-color: #ffffff;
   --ui-base-lighter-color: #ffffff;
-  --ui-primary-color: #9baec8;
+  --ui-primary-color: #c1c1c1;
   --ui-secondary-color: #dfdfdf;
   --ui-shadow-color: #202020;
   --ui-body-color: #ffffff;
-  --ui-body-secondary-color: #eff2f5; /* change to border for light theme? */
+  --ui-body-secondary-color: #f4f4f4;
   --ui-body-dim-color: #ffffff;
   --ui-body-simple-bg: #333845;
   --ui-page-border-color: #d5d5d5;
-
-  /* Font Colors */
   --ui-font-color: #000000;
   --ui-font-secondary-color: #46494a;
   --ui-inverted-font-color: #282c37;
@@ -75,7 +73,7 @@
   --ui-font-dimmest-color: #6f7791;
   --ui-font-brighter-color: #96a4c8;
   --ui-font-bright-color: #545e6c;
-  --ui-font-stark-color: #fff;
+  --ui-font-stark-color: #ffffff;
 
   .wordmark img {
     display: inherit !important;
