--- a/app/javascript/flavours/aether/styles/variables.scss
+++ b/app/javascript/flavours/aether/styles/variables.scss
@@ -42,7 +42,7 @@
   --ui-page-border-color: #282c37;
 
   /* Font Colors */
-  --ui-font-color: #ffffff;
+  --ui-font-color: #e8e8e8;
   --ui-font-secondary-color: #d9e1e8;
   --ui-inverted-font-color: #282c37;
   --ui-font-dimmer-color: #606984;
@@ -66,7 +66,7 @@
   --ui-body-dim-color: #ffffff;
   --ui-body-simple-bg: #333845;
   --ui-page-border-color: #d5d5d5;
-  --ui-font-color: #000000;
+  --ui-font-color: #262626;
   --ui-font-secondary-color: #46494a;
   --ui-inverted-font-color: #282c37;
   --ui-font-dimmer-color: #606984;
@@ -100,7 +100,7 @@
   --ui-page-border-color: #282c37;
 
   /* Font Colors */
-  --ui-font-color: #000000;
+  --ui-font-color: #262626;
   --ui-font-secondary-color: #46494a;
   --ui-inverted-font-color: #282c37;
   --ui-font-dimmer-color: #606984;
