Fix code block text showing up in CW'd posts

--- a/app/javascript/flavours/aether/styles/components/contentwarning.scss
+++ b/app/javascript/flavours/aether/styles/components/contentwarning.scss
@@ -118,6 +118,10 @@
   a {
     pointer-events: none;
   }
+
+  code {
+    font-family: flow-block, sans-serif;
+  }
 }
 
 .status__content__spoiler--hidden,
