--- a/app/javascript/flavours/aether/styles/admin.scss
+++ b/app/javascript/flavours/aether/styles/admin.scss
@@ -19,7 +19,7 @@ $content-width: 840px;
     &__inner {
       display: flex;
       justify-content: flex-end;
-      background: $ui-base-color;
+      background: var(--ui-base-color);
       height: 100%;
     }
   }
@@ -31,8 +31,8 @@ $content-width: 840px;
 
     &__toggle {
       display: none;
-      background: darken($ui-base-color, 4%);
-      border-bottom: 1px solid lighten($ui-base-color, 4%);
+      background: var(--ui-page-background);
+      border-bottom: 1px solid var(--ui-base-lighter-color);
       align-items: center;
 
       &__logo {
@@ -55,7 +55,7 @@ $content-width: 840px;
         border-radius: 4px;
 
         &:focus {
-          background: $ui-base-color;
+          background: var(--ui-base-color);
         }
 
         .fa-times {
@@ -122,7 +122,7 @@ $content-width: 840px;
 
         &:hover {
           color: var(--ui-font-color);
-          background-color: darken($ui-base-color, 5%);
+          background-color: var(--ui-page-background);
           transition: all 100ms linear;
           transition-property: color, background-color;
         }
@@ -133,7 +133,7 @@ $content-width: 840px;
       }
 
       ul {
-        background: darken($ui-base-color, 4%);
+        background: var(--ui-page-background);
         border-radius: 0 0 0 4px;
         margin: 0;
 
@@ -232,7 +232,7 @@ $content-width: 840px;
           &:hover,
           &:focus,
           &:active {
-            background: lighten($ui-base-color, 4%);
+            background: var(--ui-base-lighter-color);
           }
 
           &.selected {
@@ -285,7 +285,7 @@ $content-width: 840px;
       color: var(--ui-font-dimmest-color);
       padding-bottom: 8px;
       margin-bottom: 8px;
-      border-bottom: 1px solid lighten($ui-base-color, 8%);
+      border-bottom: 1px solid var(--ui-base-lighter-color);
     }
 
     h6 {
@@ -379,14 +379,14 @@ $content-width: 840px;
           inset-inline-start: 0;
           bottom: 0;
           overflow-y: auto;
-          background: $ui-base-color;
+          background: var(--ui-base-color);
         }
       }
 
       ul a,
       ul ul a {
         border-radius: 0;
-        border-bottom: 1px solid lighten($ui-base-color, 4%);
+        border-bottom: 1px solid var(--ui-base-lighter-color);
         transition: none;
 
         &:hover {
@@ -409,13 +409,13 @@ $content-width: 840px;
   .warning {
     background: transparent !important;
     border: 1px var(--ui-font-color) solid;
-    color: var(--ui-font-color);
+    color: var(--ui-highlight-button-text-color);
   }
 
   button,
   .button {
-    background: white;
-    color: black;
+    background: var(--ui-highlight-color);
+    color: var(--ui-font-color);
 
     &:hover {
       background: white;
@@ -537,11 +537,11 @@ body,
       text-transform: uppercase;
       font-size: 12px;
       font-weight: 500;
-      border-bottom: 2px solid $ui-base-color;
+      border-bottom: 2px solid var(--ui-base-color);
 
       &:hover {
         color: var(--ui-font-color);
-        border-bottom: 2px solid lighten($ui-base-color, 5%);
+        border-bottom: 2px solid var(--ui-base-lighter-color);
       }
 
       &.selected {
@@ -711,8 +711,8 @@ body,
   line-height: 20px;
   padding: 15px;
   padding-inline-start: 15px * 2 + 40px;
-  background: $ui-base-color;
-  border-bottom: 1px solid darken($ui-base-color, 8%);
+  background: var(--ui-base-color);
+  border-bottom: 1px solid var(--ui-page-background);
   position: relative;
   text-decoration: none;
   color: var(--ui-font-dimmest-color);
@@ -732,7 +732,7 @@ body,
   &:hover,
   &:focus,
   &:active {
-    background: lighten($ui-base-color, 4%);
+    background: var(--ui-base-lighter-color);
   }
 
   &__avatar {
@@ -859,7 +859,7 @@ a.name-tag,
 }
 
 .report-card {
-  background: $ui-base-color;
+  background: var(--ui-base-color);
   border-radius: 4px;
   margin-bottom: 20px;
 
@@ -906,10 +906,10 @@ a.name-tag,
     &__item {
       display: flex;
       justify-content: flex-start;
-      border-top: 1px solid darken($ui-base-color, 4%);
+      border-top: 1px solid var(--ui-page-background);
 
       &:hover {
-        background: lighten($ui-base-color, 2%);
+        background: var(--ui-base-color);
       }
 
       &__reported-by,
@@ -981,7 +981,7 @@ a.name-tag,
 
   .account__header__fields,
   .account__header__content {
-    background: lighten($ui-base-color, 8%);
+    background: var(--ui-base-lighter-color);
     border-radius: 4px;
     height: 100%;
   }
@@ -1017,8 +1017,8 @@ a.name-tag,
 .applications-list__item,
 .filters-list__item {
   padding: 15px 0;
-  background: $ui-base-color;
-  border: 1px solid lighten($ui-base-color, 4%);
+  background: var(--ui-base-color);
+  border: 1px solid var(--ui-base-lighter-color);
   border-radius: 4px;
   margin-top: 15px;
 }
@@ -1029,13 +1029,13 @@ a.name-tag,
 
 .announcements-list,
 .filters-list {
-  border: 1px solid lighten($ui-base-color, 4%);
+  border: 1px solid var(--ui-base-lighter-color);
   border-radius: 4px;
 
   &__item {
     padding: 15px 0;
-    background: $ui-base-color;
-    border-bottom: 1px solid lighten($ui-base-color, 4%);
+    background: var(--ui-base-color);
+    border-bottom: 1px solid var(--ui-base-lighter-color);
 
     &__title {
       padding: 0 15px;
@@ -1186,7 +1186,7 @@ a.name-tag,
 .sparkline {
   display: block;
   text-decoration: none;
-  background: lighten($ui-base-color, 4%);
+  background: var(--ui-base-lighter-color);
   border-radius: 4px;
   padding: 0;
   position: relative;
@@ -1259,17 +1259,17 @@ a.sparkline {
   &:hover,
   &:focus,
   &:active {
-    background: lighten($ui-base-color, 6%);
+    background: var(--ui-body-color);
   }
 }
 
 .skeleton {
-  background-color: lighten($ui-base-color, 8%);
+  background-color: var(--ui-base-lighter-color);
   background-image: linear-gradient(
     90deg,
-    lighten($ui-base-color, 8%),
-    lighten($ui-base-color, 12%),
-    lighten($ui-base-color, 8%)
+    var(--ui-base-lighter-color),
+    var(--ui-body-color),
+    var(--ui-base-lighter-color)
   );
   background-size: 200px 100%;
   background-repeat: no-repeat;
@@ -1296,7 +1296,7 @@ a.sparkline {
   }
 
   &__item {
-    border-bottom: 1px solid lighten($ui-base-color, 4%);
+    border-bottom: 1px solid var(--ui-base-lighter-color);
 
     &__key {
       font-weight: 500;
@@ -1344,12 +1344,12 @@ a.sparkline {
 
 .report-reason-selector {
   border-radius: 4px;
-  background: $ui-base-color;
+  background: var(--ui-base-color);
   margin-bottom: 20px;
 
   &__category {
     cursor: pointer;
-    border-bottom: 1px solid darken($ui-base-color, 8%);
+    border-bottom: 1px solid var(--ui-page-background);
 
     &:last-child {
       border-bottom: 0;
@@ -1377,7 +1377,7 @@ a.sparkline {
 
   &__details {
     &__item {
-      border-bottom: 1px solid lighten($ui-base-color, 8%);
+      border-bottom: 1px solid var(--ui-base-lighter-color);
       padding: 15px 0;
 
       &:last-child {
@@ -1662,13 +1662,13 @@ a.sparkline {
 }
 
 .report-actions {
-  border: 1px solid darken($ui-base-color, 8%);
+  border: 1px solid var(--ui-page-background);
 
   &__item {
     display: flex;
     align-items: center;
     line-height: 18px;
-    border-bottom: 1px solid darken($ui-base-color, 8%);
+    border-bottom: 1px solid var(--ui-page-background);
 
     &:last-child {
       border-bottom: 0;
@@ -1732,7 +1732,7 @@ a.sparkline {
 .strike-card {
   padding: 15px;
   border-radius: 4px;
-  background: $ui-base-color;
+  background: var(--ui-base-color);
   font-size: 15px;
   line-height: 20px;
   word-wrap: break-word;
@@ -1780,15 +1780,15 @@ a.sparkline {
 
   &__statuses-list {
     border-radius: 4px;
-    border: 1px solid darken($ui-base-color, 8%);
+    border: 1px solid var(--ui-page-background);
     font-size: 13px;
     line-height: 18px;
     overflow: hidden;
 
     &__item {
       padding: 16px;
-      background: lighten($ui-base-color, 2%);
-      border-bottom: 1px solid darken($ui-base-color, 8%);
+      background: var(--ui-body-color);
+      border-bottom: 1px solid var(--ui-page-background);
 
       &:last-child {
         border-bottom: 0;
@@ -1832,7 +1832,7 @@ a.sparkline {
       flex: 0 0 auto;
       width: 4px;
       height: 21px;
-      background: lighten($ui-base-color, 8%);
+      background: var(--ui-base-lighter-color);
       margin: 0 2px;
       border-radius: 2px;
 
@@ -1870,7 +1870,7 @@ a.sparkline {
       align-items: center;
       width: calc(1.375rem + 1px);
       height: calc(1.375rem + 1px);
-      background: $ui-base-color;
+      background: var(--ui-base-color);
       border: 1px solid var(--ui-font-color);
       color: var(--ui-font-color);
       border-radius: 8px;
@@ -1904,8 +1904,8 @@ a.sparkline {
     }
 
     .status {
-      border: 1px solid lighten($ui-base-color, 4%);
-      background: $ui-base-color;
+      border: 1px solid var(--ui-base-lighter-color);
+      background: var(--ui-base-color);
       border-radius: 4px;
     }
   }
