--- a/app/javascript/flavours/aether/styles/variables.scss
+++ b/app/javascript/flavours/aether/styles/variables.scss
@@ -26,8 +26,7 @@
 }
 
 .dark-theme,
-.modal-layout,
-.admin {
+.modal-layout {
   /* Background colors */
   --ui-page-background: #191b22;
   --ui-base-color: #282c37;
