Move JS to external file in public
??? I hate Ruby

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -39,4 +39,6 @@
 
     .sidebar-wrapper.sidebar-wrapper--empty
 
+%script{ src: asset_pack_path('themeLoad.js'), defer: true }
+
 = render template: 'layouts/application'
