--- a/app/javascript/flavours/aether/styles/basics.scss
+++ b/app/javascript/flavours/aether/styles/basics.scss
@@ -123,7 +123,7 @@ body {
   }
 
   &.admin {
-    background: darken($ui-base-color, 4%);
+    background: var(--ui-page-background);
     padding: 0;
   }
 
@@ -131,7 +131,7 @@ body {
     position: absolute;
     text-align: center;
     color: var(--ui-font-dimmest-color);
-    background: $ui-base-color;
+    background: var(--ui-base-color);
     width: 100%;
     height: 100%;
     padding: 0;
