Change how theme js is loaded

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -39,4 +39,6 @@
 
     .sidebar-wrapper.sidebar-wrapper--empty
 
+%script{ src: "/theme.js", defer: true }
+
 = render template: 'layouts/application'
