--- a/app/javascript/flavours/aether/styles/forms.scss
+++ b/app/javascript/flavours/aether/styles/forms.scss
@@ -171,7 +171,7 @@ textarea#account_note {
     code {
       border-radius: 3px;
       padding: 0.2em 0.4em;
-      background: darken($ui-base-color, 12%);
+      background: var(--ui-page-background);
     }
 
     li {
@@ -432,8 +432,8 @@ textarea#account_note {
     outline: 0;
     font-family: inherit;
     resize: vertical;
-    background: darken($ui-base-color, 10%);
-    border: 1px solid darken($ui-base-color, 14%);
+    background: var(--ui-page-background);
+    border: 1px solid var(--ui-body-color);
     border-radius: 4px;
     padding: 10px;
 
@@ -449,14 +449,9 @@ textarea#account_note {
       border-color: $valid-value-color;
     }
 
-    &:hover {
-      border-color: darken($ui-base-color, 20%);
-    }
-
     &:active,
     &:focus {
       border-color: var(--ui-highlight-color);
-      background: darken($ui-base-color, 8%);
     }
   }
 
@@ -520,7 +515,7 @@ textarea#account_note {
     width: 100%;
     border: 0;
     border-radius: 100px;
-    background: darken($ui-highlight-color, 2%);
+    background: var(--ui-highlight-color);
     color: var(--ui-font-color);
     font-size: 18px;
     line-height: inherit;
