--- a/app/javascript/flavours/aether/styles/forms.scss
+++ b/app/javascript/flavours/aether/styles/forms.scss
@@ -433,7 +433,7 @@ textarea#account_note {
     font-family: inherit;
     resize: vertical;
     background: var(--ui-page-background);
-    border: 1px solid var(--font-color);
+    border: 1px solid var(--ui-font-color);
     border-radius: 4px;
     padding: 10px;
 
