Flip sidebar and body colors in admin interface

--- a/app/javascript/flavours/aether/styles/admin.scss
+++ b/app/javascript/flavours/aether/styles/admin.scss
@@ -19,7 +19,7 @@ $content-width: 840px;
     &__inner {
       display: flex;
       justify-content: flex-end;
-      background: var(--ui-base-color);
+      background: var(--ui-page-background);
       height: 100%;
     }
   }
