--- a/app/javascript/flavours/aether/styles/basics.scss
+++ b/app/javascript/flavours/aether/styles/basics.scss
@@ -123,7 +123,7 @@ body {
   }
 
   &.admin {
-    background: var(--ui-page-background);
+    background: var(--ui-body-color);
     padding: 0;
   }
 
