--- a/app/javascript/flavours/aether/styles/admin.scss
+++ b/app/javascript/flavours/aether/styles/admin.scss
@@ -20,7 +20,8 @@ $content-width: 840px;
       display: flex;
       justify-content: flex-end;
       background: var(--ui-page-background);
-      height: 100%;
+
+      /* height: 100%; Fixme: Broke on mobile? */
     }
   }
 
@@ -111,7 +112,6 @@ $content-width: 840px;
         text-decoration: none;
         transition: all 200ms linear;
         transition-property: color, background-color;
-        border-radius: 4px 0 0 4px;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -122,7 +122,7 @@ $content-width: 840px;
 
         &:hover {
           color: var(--ui-font-color);
-          background-color: var(--ui-page-background);
+          background-color: var(--ui-body-dark-color);
           transition: all 100ms linear;
           transition-property: color, background-color;
         }
@@ -133,7 +133,7 @@ $content-width: 840px;
       }
 
       ul {
-        background: var(--ui-page-background);
+        background: var(--ui-body-dark-color);
         border-radius: 0 0 0 4px;
         margin: 0;
 
@@ -144,8 +144,9 @@ $content-width: 840px;
       }
 
       .simple-navigation-active-leaf a {
-        color: var(--ui-font-color);
-        border: 1px solid var(--ui-font-color);
+        color: var(--ui-highlight-button-color);
+        background: var(--ui-highlight-color);
+        border-radius: 0;
       }
     }
 
@@ -388,6 +389,8 @@ $content-width: 840px;
         border-radius: 0;
         border-bottom: 1px solid var(--ui-base-lighter-color);
         transition: none;
+        color: var(--ui-font-color);
+        background: var(--ui-body-color);
 
         &:hover {
           transition: none;
@@ -412,6 +415,15 @@ $content-width: 840px;
     color: var(--ui-highlight-button-text-color);
   }
 
+  button.spoiler-button__overlay {
+    background: transparent;
+    color: var(--ui-font-color);
+
+    &:hover {
+      background: transparent;
+    }
+  }
+
   button,
   .button {
     background: var(--ui-highlight-color);
@@ -429,6 +441,10 @@ $content-width: 840px;
     &:hover {
       border-bottom: 1px solid white;
     }
+  }
+
+  .account-card {
+    background: var(--ui-body-dark-color);
   }
 }
 
@@ -712,7 +728,7 @@ body,
   padding: 15px;
   padding-inline-start: 15px * 2 + 40px;
   background: var(--ui-base-color);
-  border-bottom: 1px solid var(--ui-page-background);
+  border-bottom: 1px solid var(--ui-body-dark-color);
   position: relative;
   text-decoration: none;
   color: var(--ui-font-dimmest-color);
@@ -726,7 +742,6 @@ body,
   &:last-child {
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
-    border-bottom: 0;
   }
 
   &:hover,
@@ -906,7 +921,7 @@ a.name-tag,
     &__item {
       display: flex;
       justify-content: flex-start;
-      border-top: 1px solid var(--ui-page-background);
+      border-top: 1px solid var(--ui-body-dark-color);
 
       &:hover {
         background: var(--ui-base-color);
@@ -1349,7 +1364,7 @@ a.sparkline {
 
   &__category {
     cursor: pointer;
-    border-bottom: 1px solid var(--ui-page-background);
+    border-bottom: 1px solid var(--ui-body-dark-color);
 
     &:last-child {
       border-bottom: 0;
@@ -1407,7 +1422,7 @@ a.sparkline {
 }
 
 .account-card {
-  background: var(--ui-base-color);
+  background: var(--ui-body-dark-color);
   border-radius: 4px;
 
   &__permalink {
@@ -1426,7 +1441,7 @@ a.sparkline {
       width: 100%;
       height: 100%;
       object-fit: cover;
-      background: var(--ui-page-background);
+      background: var(--ui-body-dark-color);
     }
   }
 
@@ -1444,7 +1459,7 @@ a.sparkline {
         margin: 0;
         width: 56px;
         height: 56px;
-        background-color: var(--ui-page-background);
+        background-color: var(--ui-body-dark-color);
         border-radius: 8px;
         border: 1px solid var(--ui-base-color);
       }
@@ -1570,7 +1585,7 @@ a.sparkline {
     position: relative;
     padding: 15px;
     padding-inline-start: 15px * 2 + 40px;
-    border-bottom: 1px solid var(--ui-page-background);
+    border-bottom: 1px solid var(--ui-body-dark-color);
 
     &:first-child {
       border-top-left-radius: 4px;
@@ -1662,13 +1677,13 @@ a.sparkline {
 }
 
 .report-actions {
-  border: 1px solid var(--ui-page-background);
+  border: 1px solid var(--ui-body-dark-color);
 
   &__item {
     display: flex;
     align-items: center;
     line-height: 18px;
-    border-bottom: 1px solid var(--ui-page-background);
+    border-bottom: 1px solid var(--ui-body-dark-color);
 
     &:last-child {
       border-bottom: 0;
@@ -1780,7 +1795,7 @@ a.sparkline {
 
   &__statuses-list {
     border-radius: 4px;
-    border: 1px solid var(--ui-page-background);
+    border: 1px solid var(--ui-body-dark-color);
     font-size: 13px;
     line-height: 18px;
     overflow: hidden;
@@ -1788,7 +1803,7 @@ a.sparkline {
     &__item {
       padding: 16px;
       background: var(--ui-body-color);
-      border-bottom: 1px solid var(--ui-page-background);
+      border-bottom: 1px solid var(--ui-body-dark-color);
 
       &:last-child {
         border-bottom: 0;
