--- a/app/javascript/flavours/aether/styles/admin.scss
+++ b/app/javascript/flavours/aether/styles/admin.scss
@@ -133,7 +133,7 @@ $content-width: 840px;
       }
 
       ul {
-        background: var(--ui-body-dark-color);
+        background: var(--ui-body-color);
         border-radius: 0 0 0 4px;
         margin: 0;
 
@@ -342,7 +342,7 @@ $content-width: 840px;
       width: 100%;
       height: 0;
       border: 0;
-      border-bottom: 1px solid rgba($ui-base-lighter-color, 0.6);
+      border-bottom: 1px solid var(--ui-base-lighter-color);
       margin: 20px 0;
 
       &.spacer {
