--- a/app/javascript/flavours/aether/styles/tables.scss
+++ b/app/javascript/flavours/aether/styles/tables.scss
@@ -9,9 +9,9 @@
     padding: 8px;
     line-height: 18px;
     vertical-align: top;
-    border-top: 1px solid $ui-base-color;
+    border-top: 1px solid var(--ui-body-color);
     text-align: start;
-    background: darken($ui-base-color, 4%);
+    background: var(--ui-body-dark-color);
   }
 
   & > thead > tr > th {
@@ -27,7 +27,7 @@
 
   & > tbody > tr:nth-child(odd) > td,
   & > tbody > tr:nth-child(odd) > th {
-    background: $ui-base-color;
+    background: var(--ui-body-color);
   }
 
   a {
@@ -73,7 +73,7 @@
     & > tbody > tr > td {
       padding: 11px 10px;
       background: transparent;
-      border: 1px solid lighten($ui-base-color, 8%);
+      border: 1px solid var(--ui-body-color);
       color: var(--ui-font-secondary-color);
     }
 
@@ -85,18 +85,18 @@
 
   &.batch-table {
     & > thead > tr > th {
-      background: $ui-base-color;
-      border-top: 1px solid darken($ui-base-color, 8%);
-      border-bottom: 1px solid darken($ui-base-color, 8%);
+      background: var(--ui-body-color);
+      border-top: 1px solid var(--ui-body-dark-color);
+      border-bottom: 1px solid var(--ui-body-dark-color);
 
       &:first-child {
         border-radius: 4px 0 0;
-        border-inline-start: 1px solid darken($ui-base-color, 8%);
+        border-inline-start: 1px solid var(--ui-body-dark-color);
       }
 
       &:last-child {
         border-radius: 0 4px 0 0;
-        border-inline-end: 1px solid darken($ui-base-color, 8%);
+        border-inline-end: 1px solid var(--ui-body-dark-color);
       }
     }
   }
@@ -181,8 +181,8 @@ a.table-action-link {
     position: sticky;
     top: 0;
     z-index: 1;
-    border: 1px solid darken($ui-base-color, 8%);
-    background: $ui-base-color;
+    border: 1px solid var(--ui-body-dark-color);
+    background: var(--ui-body-color);
     border-radius: 4px 0 0;
     height: 47px;
     align-items: center;
@@ -194,7 +194,7 @@ a.table-action-link {
   }
 
   &__select-all {
-    background: $ui-base-color;
+    background: var(--ui-body-color);
     height: 47px;
     align-items: center;
     justify-content: center;
@@ -237,16 +237,16 @@ a.table-action-link {
       &:hover,
       &:focus,
       &:active {
-        background: lighten($ui-base-color, 8%);
+        background: var(--ui-body-color);
       }
     }
   }
 
   &__form {
     padding: 16px;
-    border: 1px solid darken($ui-base-color, 8%);
+    border: 1px solid var(--ui-body-dark-color);
     border-top: 0;
-    background: $ui-base-color;
+    background: var(--ui-body-color);
 
     .fields-row {
       padding-top: 0;
@@ -255,25 +255,25 @@ a.table-action-link {
   }
 
   &__row {
-    border: 1px solid darken($ui-base-color, 8%);
+    border: 1px solid var(--ui-body-dark-color);
     border-top: 0;
-    background: darken($ui-base-color, 4%);
+    background: var(--ui-body-color);
 
     @media screen and (max-width: $no-gap-breakpoint) {
       .optional &:first-child {
-        border-top: 1px solid darken($ui-base-color, 8%);
+        border-top: 1px solid var(--ui-body-dark-color);
       }
     }
 
     &:hover {
-      background: darken($ui-base-color, 2%);
+      background: var(--ui-body-color);
     }
 
     &:nth-child(even) {
-      background: $ui-base-color;
+      background: var(--ui-body-color);
 
       &:hover {
-        background: lighten($ui-base-color, 2%);
+        background: var(--ui-body-dim-color);
       }
     }
 
@@ -348,12 +348,12 @@ a.table-action-link {
   }
 
   .nothing-here {
-    border: 1px solid darken($ui-base-color, 8%);
+    border: 1px solid var(--ui-body-dark-color);
     border-top: 0;
     box-shadow: none;
 
     @media screen and (max-width: $no-gap-breakpoint) {
-      border-top: 1px solid darken($ui-base-color, 8%);
+      border-top: 1px solid var(--ui-body-dark-color);
     }
   }
 
