--- a/app/javascript/flavours/aether/styles/admin.scss
+++ b/app/javascript/flavours/aether/styles/admin.scss
@@ -1425,7 +1425,7 @@ a.sparkline {
 }
 
 .account-card {
-  background: var(--ui-body-dark-color);
+  background: var(--ui-body-color);
   border-radius: 4px;
 
   &__permalink {
