--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,10 @@
     - if storage_host?
       %link{ rel: 'dns-prefetch', href: storage_host }/
 
-    %link{ rel: 'icon', href: icon, type: 'image/png' }/
+    - if defined?(icon) && icon.present? && icon.file.present?
+      %link{ rel: 'icon', href: icon, type: 'image/png' }/
+    - else
+      %link{ rel: 'icon', href: '/favicon.ico', type: 'image/png' }/
 
     %link{ rel: 'mask-icon', href: asset_pack_path('media/images/logo-symbol-icon.svg'), color: '#6364FF' }/
     %link{ rel: 'manifest', href: manifest_path(format: :json) }/
