--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -12,7 +12,7 @@
           .sidebar__toggle
             .sidebar__toggle__logo
               = link_to root_path do
-                = logo_as_symbol(:wordmark)
+                %img{ src: "icon_url", alt: "Logo" }
 
             = link_to '#', class: 'sidebar__toggle__icon', 'aria-label': t('navigation.toggle_menu'), 'aria-expanded': 'false' do
               = fa_icon 'bars'
