--- a/app/views/layouts/auth.html.haml
+++ b/app/views/layouts/auth.html.haml
@@ -3,7 +3,7 @@
     .logo-container
       %h1
         = link_to root_path do
-          = logo_as_symbol(:wordmark)
+          %img{ src: "icon_url", alt: "Logo" }
 
     .form-container
       = render 'flashes'
