--- a/app/javascript/flavours/aether/styles/accounts.scss
+++ b/app/javascript/flavours/aether/styles/accounts.scss
@@ -179,7 +179,7 @@
 }
 
 .nothing-here {
-  background: var(--ui-body-dim-color);
+  background: var(--ui-body-color);
   box-shadow: 0 0 15px var(--ui-dropdown-shadow-20);
   color: var(--ui-font-bright-color);
   font-size: 14px;
