--- a/app/javascript/flavours/aether/styles/components/columns.scss
+++ b/app/javascript/flavours/aether/styles/components/columns.scss
@@ -951,7 +951,7 @@ $ui-header-height: 55px;
   margin-bottom: 5px;
   border-radius: 8px;
   border: 1px solid var(--ui-highlight-color);
-  background: var(--ui-body-dim-color);
+  background: var(--ui-body-color);
   padding-inline-end: 45px;
   overflow: hidden;
   border-bottom-left-radius: 4px;
