--- a/app/javascript/flavours/aether/styles/emoji.scss
+++ b/app/javascript/flavours/aether/styles/emoji.scss
@@ -226,7 +226,7 @@
     font-family: inherit;
     display: block;
     width: 100%;
-    background: var(--ui-body-dim-color);
+    background: var(--ui-body-color);
     color: var(--ui-font-secondary-color);
     border: 1px solid var(--ui-page-background);
     border-radius: 4px;
