--- a/app/javascript/flavours/aether/styles/low_contrast.scss
+++ b/app/javascript/flavours/aether/styles/low_contrast.scss
@@ -10,7 +10,7 @@
   }
 
   .dropdown-menu {
-    background: var(--ui-body-dim-color);
+    background: var(--ui-body-color);
   }
 
   .dropdown-menu__item {
