--- a/app/javascript/flavours/aether/styles/tables.scss
+++ b/app/javascript/flavours/aether/styles/tables.scss
@@ -273,7 +273,7 @@ a.table-action-link {
       background: var(--ui-body-color);
 
       &:hover {
-        background: var(--ui-body-dim-color);
+        background: var(--ui-body-color);
       }
     }
 
