--- a/app/javascript/flavours/aether/styles/variables.scss
+++ b/app/javascript/flavours/aether/styles/variables.scss
@@ -34,9 +34,8 @@
   --ui-primary-color: #9baec8;
   --ui-secondary-color: #d9e1e8;
   --ui-shadow-color: #202020;
-  --ui-body-color: #282c37;
+  --ui-body-color: #252933;
   --ui-body-secondary-color: #1f222b;
-  --ui-body-dim-color: #252933;
   --ui-body-simple-bg: #ffffff;
   --ui-page-border-color: #282c37;
   --ui-body-dark-color: var(--ui-page-background);
@@ -63,7 +62,6 @@
   --ui-shadow-color: #202020;
   --ui-body-color: #ffffff;
   --ui-body-secondary-color: #f4f4f4;
-  --ui-body-dim-color: #ffffff;
   --ui-body-simple-bg: #333845;
   --ui-page-border-color: #d5d5d5;
   --ui-body-dark-color: var(--ui-page-background);
@@ -100,7 +98,6 @@
   --ui-shadow-color: #202020;
   --ui-body-color: #ffffff;
   --ui-body-secondary-color: #eff2f5; /* change to border for light theme? */
-  --ui-body-dim-color: #ffffff;
   --ui-body-simple-bg: #333845;
   --ui-page-border-color: #282c37;
   --ui-body-dark-color: #e9ecee;
