--- a/app/javascript/flavours/aether/styles/components/modal.scss
+++ b/app/javascript/flavours/aether/styles/components/modal.scss
@@ -842,7 +842,7 @@
     width: 100%;
     margin: 0;
     color: var(--ui-font-color);
-    background: var(--ui-body-dim-color);
+    background: var(--ui-body-color);
     padding: 10px;
     font-family: inherit;
     font-size: 14px;
