--- a/app/javascript/flavours/aether/styles/themes.scss
+++ b/app/javascript/flavours/aether/styles/themes.scss
@@ -16,7 +16,7 @@
     border-radius: 0;
   }
 
-  .status:first-child {
+  article:first-child .status {
     margin-top: 0;
     border-radius: var(--ui-border-radius) var(--ui-border-radius) 0 0;
   }
