--- a/app/javascript/flavours/aether/styles/themes.scss
+++ b/app/javascript/flavours/aether/styles/themes.scss
@@ -14,11 +14,7 @@
 .smooshed {
   .status {
     border-radius: 0;
-    margin-top: 0;
-  }
-
-  .focusable {
-    border-bottom: 2px solid var(--ui-page-background);
+    margin-top: 2px;
   }
 
   article:first-child .status {
