--- a/app/javascript/flavours/aether/styles/admin.scss
+++ b/app/javascript/flavours/aether/styles/admin.scss
@@ -1508,7 +1508,7 @@ a.sparkline {
       position: absolute;
       bottom: 0;
       inset-inline-end: 15px;
-      background: linear-gradient(to left, var(--ui-base-color), transparent);
+      background: linear-gradient(to left, var(--ui-body-color), transparent);
       pointer-events: none;
     }
 
