--- a/app/javascript/flavours/aether/styles/themes.scss
+++ b/app/javascript/flavours/aether/styles/themes.scss
@@ -1,35 +1,34 @@
-.wired,
-.wireless {
-  .dark-theme {
-    .status {
-      background: var(--ui-body-dark-color);
-    }
-
-    .right_column .explore__suggested-header,
-    .right_column .explore__tags-header,
-    .right_column .list-panel {
-      background: var(--ui-body-dark-color);
-      border: 2px solid var(--ui-body-color);
-    }
+.wired .dark-theme,
+.wireless .dark-theme {
+  .status {
+    background: var(--ui-body-dark-color);
   }
 
-  .light-theme {
-    background: var(--ui-body-color) !important;
+  .right_column .explore__suggested-header,
+  .right_column .explore__tags-header,
+  .right_column .list-panel {
+    background: var(--ui-body-dark-color);
+    border: 2px solid var(--ui-body-color);
+  }
+}
 
-    .status {
-      background: var(--ui-body-color);
-    }
+.wired .light-theme,
+.wireless .light-theme {
+  background: var(--ui-body-color) !important;
 
-    .focusable {
-      border-color: var(--ui-page-background);
-    }
+  .status {
+    background: var(--ui-body-color);
+  }
 
-    .right_column .explore__suggested-header,
-    .right_column .explore__tags-header,
-    .right_column .list-panel {
-      background: var(--ui-body-dark-color);
-      border: 2px solid var(--ui-page-background);
-    }
+  .focusable {
+    border-color: var(--ui-page-background);
+  }
+
+  .right_column .explore__suggested-header,
+  .right_column .explore__tags-header,
+  .right_column .list-panel {
+    background: var(--ui-body-dark-color);
+    border: 2px solid var(--ui-page-background);
   }
 }
 
