--- a/app/javascript/flavours/aether/styles/themes.scss
+++ b/app/javascript/flavours/aether/styles/themes.scss
@@ -13,7 +13,7 @@
 
   .account__fields {
     border: 1px solid var(--ui-body-color);
-    background: var(--ui-body-color);
+    background: var(--ui-page-background);
 
     dl {
       border-bottom: 1px solid var(--ui-body-color);
