Fix follower notifications

--- a/app/javascript/flavours/aether/styles/components/single_column_aether.scss
+++ b/app/javascript/flavours/aether/styles/components/single_column_aether.scss
@@ -3,7 +3,8 @@
     display: block;
   }
 
-  .status {
+  .status,
+  .notification {
     margin-top: 8px;
     border-radius: var(--ui-border-radius);
   }
