Fix filtered statuses

--- a/app/javascript/flavours/aether/styles/components/single_column_aether.scss
+++ b/app/javascript/flavours/aether/styles/components/single_column_aether.scss
@@ -4,7 +4,8 @@
   }
 
   .status,
-  .notification {
+  .notification,
+  .status__wrapper--filtered {
     margin-top: 8px;
     border-radius: var(--ui-border-radius);
   }
