--- a/app/javascript/flavours/aether/styles/themes.scss
+++ b/app/javascript/flavours/aether/styles/themes.scss
@@ -72,7 +72,8 @@
   }
 
   .status,
-  .notification {
+  .notification,
+  .status__wrapper--filtered {
     border-radius: 0;
     margin-top: 2px;
   }
@@ -120,7 +121,8 @@
     }
   }
 
-  .notification {
+  .notification,
+  .status__wrapper--filtered {
     border-color: transparent;
   }
 }
