--- a/app/views/layouts/error.html.haml
+++ b/app/views/layouts/error.html.haml
@@ -7,7 +7,7 @@
     %meta{ content: 'width=device-width,initial-scale=1', name: 'viewport' }/
     = javascript_pack_tag "common", crossorigin: 'anonymous'
     = render partial: 'layouts/theme', object: (@core || { pack: 'common' })
-    = render partial: 'layouts/theme', object: (@theme || { pack: 'error', flavour: 'glitch', common: { pack: 'common', flavour: 'glitch', skin: 'default' } })
+    = render partial: 'layouts/theme', object: (@theme || { pack: 'error', flavour: 'aether', common: { pack: 'common', flavour: 'aether', skin: 'default' } })
   %body.error
     .dialog
       .dialog__illustration
