--- a/app/javascript/flavours/aether/styles/components/local_settings.scss
+++ b/app/javascript/flavours/aether/styles/components/local_settings.scss
@@ -322,6 +322,7 @@
   padding-top: 0 !important;
 }
 
+#mastodon-settings--font-size,
 #mastodon-settings--collapsed-auto-height {
   width: 100% !important;
 }
