--- a/app/javascript/flavours/aether/styles/basics.scss
+++ b/app/javascript/flavours/aether/styles/basics.scss
@@ -8,9 +8,9 @@
 
 body {
   font-family: $font-sans-serif, sans-serif;
+  font-size: 16px;
   background: var(--ui-page-background);
-  font-size: 13px;
-  line-height: 18px;
+  line-height: 1.14em;
   font-weight: 400;
   color: var(--ui-font-color);
   text-rendering: optimizelegibility;
@@ -149,8 +149,8 @@ body {
       }
 
       h1 {
-        font-size: 20px;
-        line-height: 28px;
+        font-size: 1.5rem;
+        line-height: 1.14em;
         font-weight: 400;
       }
     }
@@ -199,9 +199,7 @@ button {
 .error-boundary,
 .app-holder noscript {
   flex-direction: column;
-  font-size: 16px;
   font-weight: 400;
-  line-height: 1.7;
   color: lighten($error-red, 4%);
   text-align: center;
 
@@ -229,7 +227,7 @@ button {
 
   &__footer {
     color: var(--ui-font-dimmer-color);
-    font-size: 13px;
+    font-size: 0.8rem;
 
     a {
       color: var(--ui-font-dimmer-color);
