--- a/app/javascript/flavours/aether/styles/components/columns.scss
+++ b/app/javascript/flavours/aether/styles/components/columns.scss
@@ -1138,9 +1138,15 @@ $ui-header-height: 55px;
     padding-right: 15px !important;
     overflow: visible;
     color: transparent;
-    transition:
-      0.2s color,
-      0.2s -webkit-text-stroke;
+
+    @media screen and (prefers-reduced-motion: no-preference) {
+      & {
+        transition:
+          color 0.2s,
+          background 0.2s,
+          -webkit-text-stroke 0.2s;
+      }
+    }
 
     .fa {
       -webkit-text-stroke: 1.8px var(--ui-highlight-color);
@@ -1256,6 +1262,17 @@ h1#Misc {
       &:active {
         background: transparent;
       }
+    }
+  }
+}
+
+.list-panel .column-link {
+  @media screen and (prefers-reduced-motion: no-preference) {
+    & {
+      transition:
+        color 0.2s,
+        background 0.2s,
+        -webkit-text-stroke 0.2s;
     }
   }
 }
