--- a/app/javascript/flavours/aether/styles/components/misc.scss
+++ b/app/javascript/flavours/aether/styles/components/misc.scss
@@ -68,7 +68,14 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   width: auto;
-  transition: box-shadow 0.2s;
+  @media screen and (prefers-reduced-motion: no-preference) {
+    & {
+      transition:
+        background 0.2s,
+        color 0.2s,
+        box-shadow 0.2s;
+    }
+  }
 
   &:active,
   &:focus,
