--- a/app/javascript/flavours/aether/styles/components/status.scss
+++ b/app/javascript/flavours/aether/styles/components/status.scss
@@ -1272,7 +1272,7 @@ a.status-card.compact:hover {
 }
 
 code {
-  background: var(--ui-page-background);
+  background: var(--ui-body-dark-color);
 }
 
 pre > code {
