--- a/app/javascript/flavours/aether/styles/components/compose_form.scss
+++ b/app/javascript/flavours/aether/styles/components/compose_form.scss
@@ -251,7 +251,7 @@
       margin: 0;
       border: 0;
       border-radius: var(--ui-border-radius) var(--ui-border-radius) 0 0;
-      padding: 10px 32px 0 10px;
+      padding: 10px 32px 10px 10px;
       width: 100%;
       min-height: 100px;
       outline: 0;
@@ -281,7 +281,6 @@
       }
 
       @include limited-single-column('screen and (max-width: 600px)') {
-        height: 100px !important; // prevent auto-resize textarea
         resize: vertical;
       }
     }
@@ -291,7 +290,7 @@
       box-sizing: border-box;
       margin: 0;
       border: 0;
-      padding: 10px 32px 8px 10px;
+      padding: 10px;
       width: 100%;
       min-height: 1rem;
       outline: 0;
