Add cancel to compose modal
Adds a cancel button that clears the compose modal

--- a/app/javascript/flavours/aether/styles/modal.scss
+++ b/app/javascript/flavours/aether/styles/modal.scss
@@ -62,6 +62,20 @@
   }
 }
 
+.compose-modal {
+  position: relative;
+
+  .compose-form {
+    padding-bottom: 0;
+  }
+
+  .button-cancel {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+  }
+}
+
 .right-column-show-more {
   display: flex;
   justify-content: center;
