--- a/app/javascript/flavours/aether/styles/modal.scss
+++ b/app/javascript/flavours/aether/styles/modal.scss
@@ -64,6 +64,8 @@
 
 .compose-modal {
   position: relative;
+  background: var(--ui-body-dark-color);
+  padding: 8px;
 
   .compose-form {
     padding-bottom: 0;
@@ -71,8 +73,8 @@
 
   .button-cancel {
     position: absolute;
-    left: 0;
-    bottom: 0;
+    left: 8px;
+    bottom: 8px;
   }
 }
 
