--- a/app/javascript/flavours/aether/styles/modal.scss
+++ b/app/javascript/flavours/aether/styles/modal.scss
@@ -66,6 +66,7 @@
   position: relative;
   background: var(--ui-body-dark-color);
   padding: 8px;
+  border-radius: var(--ui-border-radius);
 
   .compose-form {
     padding-bottom: 0;
